--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -10,13 +10,13 @@
             <a class="nav-link active" aria-current="page" href="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/candidates">Candidates</a>
+            <a class="nav-link active" aria-current="page" href="/candidates">Candidates</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/onboardees">Onboardees</a>
+            <a class="nav-link active" aria-current="page" href="/onboardees">Onboardees</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/create-onboard">Analytics</a>
+            <a class="nav-link active" aria-current="page" href="/create-onboard">Analytics</a>
           </li>
         </ul>
 
