--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,4 +1,10 @@
-footer{
-    bottom:0 !important;
-    height: 50px !important;
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #343a40!important;
+    text-align:center;
+    color:lightgray;
+    padding: 10px;
 }
