--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,12 @@
-<footer class="footer">
+  <footer class="footer" id="footer-bg">
     <div class="container">
-        <span>Footer text here</span>
+      <div class="row pt-4 text-center">
+        <div class="col-md-12">
+          <p>
+            This is the footer.
+          </p>
+        </div>
+      </div>
     </div>
-</footer>
+  </footer>
+  
