--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,10 +1,12 @@
-.footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    background-color: #343a40!important;
-    text-align:center;
-    color:lightgray;
-    padding: 10px;
+#footer-bg {
+    background: #343a40 !important;
+    color: lightgray !important;
 }
+
+.footer .push{
+  position: absolute;
+  bottom: 0;
+  height: 100px;
+  left: 0;
+  width: 100%;
+} 
