Some alterations in Onboard, added the trends functionality

--- a/src/app/core/components/candidate-display/candidate-display.component.css
+++ b/src/app/core/components/candidate-display/candidate-display.component.css
@@ -1,3 +1,7 @@
 .form-row>.col, .form-row>[class*=col-]{
     padding-left: 1% !important;
 }
+
+.table td, .table th{
+    vertical-align: middle;
+}
