--- a/src/app/core/components/onboard-display/onboard-display.component.html
+++ b/src/app/core/components/onboard-display/onboard-display.component.html
@@ -2,7 +2,7 @@
 <h1 class = "text-center" >Onboard List</h1>
 <!-- Search Bar --> 
 <div class="container">
-  <form>
+  <form >
     <div class="form-row" style= "align-self: center;">
       <div class="form-group col-md-3">
         <select id="parameter" name = "parameter" [(ngModel)] = "parameter" class="form-control">
@@ -12,6 +12,7 @@
           <option value = "lastName">Last Name</option>
           <option value = "college">College</option>
           <option value = "location">Location</option>
+          <option value="onboardStatus">Onboard Status</option>
         </select>
       </div>
       <div class="form-group col-md-7">
@@ -33,34 +34,39 @@
       <table class="table table-striped">
         <tbody>
           <tr *ngFor = "let onboard of onboards">
-                    <td colspan="1">
-                    Onboard ID: {{onboard.onboardId}} 
-                    <br>
+                <td colspan="1">
                     Candidate ID: {{onboard.candidate.candidateId}}
+                    <br>
+                    Onboard ID: {{onboard.onboardId}} 
                     <br>
                     Manager ID: {{onboard.hiringManager.hId}}
                     <br>
-                    
-                    </td>
+                </td>
 
-                    <td colspan="2">
+                <td colspan="2">
+                      Name: {{onboard.candidate.firstName}} {{onboard.candidate.lastName}}      
+                        <br>
                         Date of Creation: {{onboard.startDate}}
                         <br>
-                        Name: {{onboard.candidate.firstName}} {{onboard.candidate.lastName}}
-                        <br>
                         Manager Name: {{onboard.hiringManager.name}}
-                        <br>
-                        Manager Email: {{onboard.hiringManager.hmEmail}}
-                    </td>
+                </td>
+
                 <td colspan="1">
-                    Background Status: {{onboard.bgStatus}}
-                    <br>
                     Onboard Status: {{onboard.onboardStatus}}
                     <br>
                     Expected Onboarding Date: {{onboard.eta}}
                     <br>
                     Onboard Location: {{onboard.location}}
                 </td>
+                <td colspan="1">
+                  Background Status: <span *ngIf="onboard.bgStatus; else Pending">Done</span>
+                  <br>
+                  Graduation: <span *ngIf="onboard.graduation; else Pending">Done</span>
+                  <br>
+                  Training: <span *ngIf="onboard.training; else Pending">Done</span>
+                  <br>
+                  <ng-template #Pending>Pending</ng-template>
+              </td>
                     <td>
                         <button (click)="updateOnboard(onboard.onboardId)" class="btn btn-primary">Edit</button>
                         <br><br>
