--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/home">Navbar</a>
+      <a class="navbar-brand" href="/home"><img src="../../../assets/Accolite.png" width = "200" height = "40"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
+            <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/candidates">Candidates</a>
+            <a class="nav-link active" aria-current="page" routerLink="/candidates">Candidates</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/onboardees">Onboardees</a>
+            <a class="nav-link active" aria-current="page" routerLink="/onboardees">Onboardees</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/create-onboard">Analytics</a>
+            <a class="nav-link active" aria-current="page" routerLink="/trends">Analytics</a>
           </li>
         </ul>
 
