--- a/src/app/core/components/candidate-display/candidate-display.component.html
+++ b/src/app/core/components/candidate-display/candidate-display.component.html
@@ -10,7 +10,7 @@
         <option value = "firstName">First Name</option>
         <option value = "lastName">Last Name</option>
         <option value = "college">College</option>
-        <option value = "skills">Skill</option>
+        <option value = "skill">Skill</option>
       </select>
     </div>
     <div class="form-group col-md-7">
@@ -37,7 +37,7 @@
             <th scope="col">Email Id</th>
             <th scope="col">College</th>
             <th scope="col">Skills</th>
-            <th scope="col">Action</th>
+            <th scope="col">Onboard</th>
           </tr>
         </thead>
         <tbody>
@@ -46,8 +46,10 @@
             <td>{{candidate.firstName}} {{candidate.lastName}}</td>
             <td>{{candidate.email}}</td>
             <td>{{candidate.college}}</td>
-            <td><span *ngFor="let skills of candidate.skills">{{skills}}<br></span></td>
-            <td><button (click) = "createOnboard(candidate.candidateId)" class="btn btn-primary">Onboard</button></td>
+            <td>{{candidate.skill}}</td>
+            <td><button (click) = "createOnboard(candidate.candidateId)" *ngIf="!candidate.onboardStarted; else Started"
+              class="btn btn-primary">Onboard</button></td>
+              <ng-template #Started>Started</ng-template>
           </tr>
         </tbody>
       </table>
