--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/trends">Analytics</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/logs">Logs</a>
+          </li>
         </ul>
 
       </div>
