--- a/src/app/core/components/trends/trends.component.html
+++ b/src/app/core/components/trends/trends.component.html
@@ -10,5 +10,8 @@
 <figure class="highcharts-figure">
     <div id="container2"></div>
 </figure>
+<figure class="highcharts-figure">
+    <div id="container3"></div>
+</figure>
 </div>
 <app-footer></app-footer>
