minor changes and bug fixes

--- a/src/app/core/components/onboard-display/onboard-display.component.html
+++ b/src/app/core/components/onboard-display/onboard-display.component.html
@@ -42,7 +42,7 @@
                     <br>
                     Onboard ID: {{onboard.onboardId}} 
                     <br>
-                    Manager ID: {{onboard.hiringManager.hId}}
+                    Manager ID: {{onboard.hiringManager.hmId}}
                     <br>
                 </td>
 
