--- a/src/app/core/components/onboard/onboard.component.html
+++ b/src/app/core/components/onboard/onboard.component.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="form-group">
-            <button class = "btn btn-success" type ="submit">Submit</button>
+            <button class = "btn btn-success" type ="submit">Create</button>
         </div>
     </form>
     </div> 
