--- a/src/app/core/components/update-onboard/update-onboard.component.html
+++ b/src/app/core/components/update-onboard/update-onboard.component.html
@@ -58,7 +58,7 @@
             <label for="training">Training Done?</label>
         </div>
         <div class="form-group">
-            <button class = "btn btn-success" type ="submit">Submit</button>
+            <button class = "btn btn-success" type ="submit">Update</button>
         </div>
     </form>
     </div> 
