Modified the UI slightly

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -38,7 +38,7 @@
     <br>
     <h4>OR</h4>
     <br>
-      <div class="card-block">
+      <div class="card-block" style="margin-bottom: 20px">
         <button class="btn btn-primary" (click)="loginWithGoogle()"><span class="fa fa-google"></span>Sign in with Google</button>
       </div>
     </div>
