--- a/src/app/core/components/candidate-display/candidate-display.component.html
+++ b/src/app/core/components/candidate-display/candidate-display.component.html
@@ -1,9 +1,11 @@
 <app-navbar></app-navbar>
-<h1 class = "text-center" >Canidates List</h1>
+<div class="container">
+  <h1 class = "text-center" style="margin: 20px">Canidates List</h1>
+</div>
 <!-- Search Bar --> 
 <div class="container">
 <form>
-  <div class="form-row" style= "align-self: center;">
+  <div class="form-row" style= "align-self: center; margin-top: 20px">
     <div class="form-group col-md-3">
       <select id="parameter" name = "parameter" [(ngModel)] = "parameter" class="form-control">
         <option value="candidateId">Id</option>
@@ -29,7 +31,7 @@
 <!-- Candidates -->
 <div class="container">
 
-      <table class="table table-striped">
+      <table class="table table-striped table-borderless">
         <thead>   
           <tr>
             <th scope="col">Id</th>
