Minor touch-ups

--- a/src/app/core/components/candidate-display/candidate-display.component.html
+++ b/src/app/core/components/candidate-display/candidate-display.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <h1 class = "text-center" style="margin: 20px">Canidates List</h1>
+  <h1 class = "text-center" style="margin: 20px">Candidates List</h1>
 </div>
 <!-- Search Bar --> 
 <div class="container">
