--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,8 +1,6 @@
 <div class="jumbotron bg-transparent text-center">
     <div class="card text-center">
-      <h2 class="card-header">
-        MSAU Onboarding Portal
-      </h2>
+      <h2 class="card-header">MSAU Onboarding Portal</h2>
       <div class="row">
         <div class="col-md-6 offset-md-3 mt-4">
             <h3>Login</h3>
