--- a/src/app/core/components/log-display/log-display.component.html
+++ b/src/app/core/components/log-display/log-display.component.html
@@ -41,21 +41,11 @@
 <div class="container">
       <table class="table table-striped">
           <thead>
-            <th>
-                Log ID
-            </th>
-            <th colspan="2">
-                Timestamp
-            </th>
-            <th>
-                Action
-            </th>
-            <th>
-                User
-            </th>
-            <th>
-                User EmailId
-            </th>
+            <th>Log ID</th>
+            <th colspan="2">Timestamp</th>
+            <th>Action</th>
+            <th>User</th>
+            <th>User EmailId</th>
           </thead>
         <tbody>
           <tr *ngFor = "let log of logs">
