--- a/src/app/core/components/onboard-display/onboard-display.component.html
+++ b/src/app/core/components/onboard-display/onboard-display.component.html
@@ -33,7 +33,7 @@
     </form>
   </div>
 
-<!-- Candidate cards -->
+<!-- Onboard list -->
 <div class="container">
 
       <table class="table table-striped">
