--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class = "container">
     <h1>
-        Welcome to the AU Management System's Onboarding Portal
+      Welcome to the AU Management System's Onboarding Portal
     </h1>
     <h4>Features</h4>
 
@@ -12,7 +12,7 @@
             The candidates details are displayed and onboard button takes user to create onboard page. 
             A search option is provided with various search parameters. 
         </p>
-        <a routerLink="/candidates" class="btn btn-primary">Candidates &#10149; </a>
+        <a routerLink="/candidates" class="btn btn-primary">Candidates</a>
       </div>
     </div>
 
@@ -24,7 +24,7 @@
             to update some details. The delete button deletes the onboard process. The candidate becomes available
             for onboarding again on the candidates displaypage. 
             A search option is provided with various search parameters.</p>
-        <a routerLink="/onboardees" class="btn btn-primary">Onboardees &#10149;</a>
+        <a routerLink="/onboardees" class="btn btn-primary">Onboardees</a>
       </div>
     </div>
 
@@ -34,7 +34,7 @@
         <p class="card-text">This page displays three graphs showing the onboarding trends across 
             location, hiring managers and skills across the years.
         </p>
-        <a routerLink="/trends" class="btn btn-primary">Analytics &#10149;</a>
+        <a routerLink="/trends" class="btn btn-primary">Analytics</a>
       </div>
   </div>
     <div class="card">
@@ -44,7 +44,7 @@
             on the onboards and the users who made them. A search option is provided to search across 
             various parameters.
         </p>
-        <a routerLink="/logs" class="btn btn-primary">Logs &#10149;</a>
+        <a routerLink="/logs" class="btn btn-primary">Logs</a>
       </div>
 </div>
 </div>
